--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-embed",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "Gruntfile.js",
   "scripts": {
@@ -18,8 +18,12 @@
   "homepage": "https://github.com/xperiments/ts-embed",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-uglify": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-ts": "^4.0.1"
+    "grunt-ts": "^4.0.1",
+    "grunt-ts-embed": "0.0.3-alpha.1",
+    "grunt-uncss": "^0.4.2",
+    "typescript": "^1.5.0-alpha"
   }
 }
