--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-uglify": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-text-replace": "^0.4.0",
     "grunt-ts": "^4.0.1",
     "grunt-ts-embed": "0.0.3-alpha.1",
     "grunt-uncss": "^0.4.2",
