--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "grunt-text-replace": "^0.4.0",
     "grunt-ts": "^4.0.1",
     "grunt-ts-embed": "0.0.3-alpha.1",
-    "grunt-uncss": "^0.4.2",
+    "strip-comments": "^0.3.2",
     "typescript": "^1.5.0-alpha"
   }
 }
