--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "homepage": "https://github.com/xperiments/ts-embed",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-uglify": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-text-replace": "^0.4.0",
     "grunt-ts": "^4.0.1",
     "grunt-ts-embed": "0.0.3-alpha.1",
+    "grunt-typedoc": "^0.2.2",
     "strip-comments": "^0.3.2",
     "typescript": "^1.5.0-alpha"
   }
