--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "Gruntfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gh-pages": "git subtree push --prefix docs origin gh-pages"
   },
   "repository": {
     "type": "git",
