--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-embed",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "Gruntfile.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/xperiments/ts-embed",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-browser-mdbagde": "0.0.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-uglify": "^0.8.1",
